--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section>
       <button class="throw">KASTA</button>
       <br /><br />
-      <h1 id="hideMe">Tryck på kasta för att kasta tärningen, rimligt va?</h1>
+      <h1 id="hideMe">Tryck på knappen för att kasta tärningen, rimligt va?</h1>
       <img id="diceImg" src="" />
     </section>
     <script src="script.js"></script>
